# AJAC_Drivers

./: LICENSE  README.md
AJAC/: .gitignore  CMakeLists.txt
AJAC/driver/: beast_usb2can.cpp
AJAC/lcm_types/: usb_data_t.lcm
AJAC/lcm_types/python/: usb_command_t.py
AJAC/plot/: mainwindow.h
AJAC/scripts/: launch_lcm_spy.sh  log_convert.sh
AJAC/slprj/_jitprj/: jitEngineAccessInfo.mat  s011sZdaXBd3FOnpA81bByB.l  s011sZdaXBd3FOnpA81bByB.mat  s01RorvGeI3GnZzttpQeTvE.mat  s0hzzGBxLOKrJkzCXa5yKDG.l  s0hzzGBxLOKrJkzCXa5yKDG.mat  s0sQlv8YOoG8G7cMpKnyh2D.mat  s1JN256Mjl62AyMFsfAVCz.mat  s1MbL4mKOuKJUMSGcUOANpF.l  s1PAOilhuz1nESqoGYOQpp.l  s1uizz4IfimPyvaQ7H76lkG.l  s1uizz4IfimPyvaQ7H76lkG.mat  s2jc8FfQFzIZvo7StFLwFoB.l  s2jc8FfQFzIZvo7StFLwFoB.mat  s4OPNDUCCK2FjZErgksRr3B.mat  s4bEf8G1Y1gr7k0n6zUtNYG.l  s4bEf8G1Y1gr7k0n6zUtNYG.mat  s4dEhZX0NcpwGPn3vCN9bHH.l  s4dEhZX0NcpwGPn3vCN9bHH.mat  s4fvZOTGL20LE69VvGcR0j.mat  s5FqI1ZWFZkG0Lxo5756HBB.l  s5FqI1ZWFZkG0Lxo5756HBB.mat  s5KZNQgl1R2igmhJv5rU1AC.l  s5KZNQgl1R2igmhJv5rU1AC.mat  s5KvDhRvaZxs2GACXIPmxCC.l  s67F0Ny3J3K7giLhnwKu2C.mat  s68MzHhvteE1qsgUlL9788B.l  s69niH93sMlR0cYjfSCbiEC.l  s69niH93sMlR0cYjfSCbiEC.mat  s6MNZ4iWY3flaUMg0qigOVC.l  s6MNZ4iWY3flaUMg0qigOVC.mat  s6Oy6C8CkKbRfGz26yo79BD.l  s6Oy6C8CkKbRfGz26yo79BD.mat  s6Y91m4Scu1svvuqoh41B8.l  s6Y91m4Scu1svvuqoh41B8.mat  s6fF4pScUkfDehcaz7spWED.l  s73A49D6vCzsdRpCsyvZukB.l  s7FZvJc7dZdeQxuhADNzqND.l  s8F73o5j3xBXPFmURxueR3E.l  s8GaKvTrW73hNrAvVN9Y7TG.l  (+197 more)
AJAC/usr_app/: lcm_reader.cpp  motor_ajac_ctrl.cpp  motor_tools.cpp
AJAC/usr_app/AJAC/: AJAC.cpp  AJAC.h  Actuator_Config.h
(+1040 files in other folders)
